# cry-for-help

./: .gitignore  AGENTS.md  README.md  augmentation.py  main.py  model_meta.json  predict.py  preprocess.py  prezentation.md  pyproject.toml  raw_analysis.py  raw_data.py  train.py  train_w_augment.py
.agents/rules/: AGENTS.md
bmp_data_processing/scripts/: bmp_to_pd.py  remove_edge.py
docs/superpowers/plans/: 2026-04-18-tearscan-web.md
docs/superpowers/specs/: 2026-04-18-tearscan-web-design.md
features_cache_v2/: convnextv2_base_val_tta.npz  dinov2_base_val_tta.npz  swinv2_base_val_tta.npz
notes/: deep_research.md  deep_research_stranka.html  raw-data.md
raw_data_processing/: raw_analysis.py  raw_visualization.py
raw_data_processing/scripts/: explore_dataset.py  inspect_raw.py  remove_edge.py  visualize_channels.py
scripts/: explore_dataset.py  inspect_raw.py  remove_edge.py
web/: classifier.py  main.py
web/static/: app.js  index.html  styles.css
