[project]
name = "hack-kosice-tears"
version = "0.1.0"
description = "Exploration of crystallized tear train set"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "numpy",
    "Pillow",
    "matplotlib>=3.10.8",
    "torch",
    "torchvision",
    "scikit-learn",
    "xgboost",
    "lightgbm"
]
