[project]
name = "hack-kosice-tears"
version = "0.1.0"
description = "Exploration of crystallized tear train set"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "matplotlib>=3.10.8",
    "numpy",
    "pandas",
    "Pillow",
    "python-multipart",
    "scikit-learn",
    "uvicorn[standard]",
]
